# car_demo

./: .gitignore  README.md
ackermann_model/: CMakeLists.txt  package.xml
ackermann_model/include/ackermann_model/: AckermannModelPlugin.hh
ackermann_model/msg/: Status.msg
ackermann_model/src/: AckermannModelPlugin.cc
demo/: CMakeLists.txt  package.xml
demo/launch/: demo.launch
prius_model/prius_description/urdf/: prius.urdf
