<package format="2">
  <name>ackermann_model</name>
  <version>0.0.1</version>
  <description>
  ackermann model
  </description>
  <maintainer email="abhishekandyadav@gmail.com">Abhishek Yadav</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
